--- a/bio.html
+++ b/bio.html
@@ -5,7 +5,7 @@
     <title>MY PERSONAL WEBSITE</title>
 </head>
 <body>
-<img src="Camera Roll/kirabo.png" width="200" height="200" alt="my picture"/>
+<img src="kirabo.png" width="200" height="200" alt="my picture"/>
 <h1>INTRODUCTION</h1>
 <p>Welcome to my website.</p>
 <P>Name : Kirabo Jelly Rollings. <br>
