--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MY PERSONAL WEBSITE</title>
+     <link rel="shortcut icon" href="pic1.png" type="image/x-icon">
 </head>
 <body>
 <img src="kirabo.png" width="200" height="200" alt="my picture"/>
